# cs240lx-22spr

./: .gitignore  Makefile  README.md  tags
fpga/: verilator.mk
fpga/upduino/: rules.mk  top.v
labs/: Makefile  README.md
labs/1-dynamic-code-gen/: Makefile  PRELAB.md  README.md
labs/1-dynamic-code-gen/code/: Makefile
labs/1-dynamic-code-gen/prelab-code-pi/: 0-ident-dcg.c  1-self-modifying.c  2-bug-self-modify.c  4-derive-pc-reg.c  Makefile  README.md
labs/1-dynamic-code-gen/prelab-code-unix/: Makefile  README.md  dcg.c
labs/10-i2c-accel/: README.md
labs/10-i2c-accel/code/: Makefile  accel.c  gyro.c
labs/11-memcheck-trap/: Makefile  PRELAB.md  README.md
labs/11-memcheck-trap/code/: Makefile  breakpoint.h  checker-eraser.c  checker-purify.c  cpsr-util.h  eraser.h  full-except.c  full-except.h  memtrace-internal.h  memtrace.c  memtrace.h  purify.h
labs/12-verilog-blink/: PRELAB.md  README.md  Vagrantfile
labs/12-verilog-blink/install-scripts/: gtkwave.sh  icestorm.sh  nextpnr-ice40.sh  prereq.sh  verilator.sh  yosys.sh
labs/13-verilog-uart/: README.md
labs/13-verilog-uart/1-rx/: Makefile  counter.sv  sim.cc  uart_rx.sv  uart_rx.sv.orig  uart_top.sv
labs/13-verilog-uart/2-tx/: Makefile  counter.sv  flag_buf.sv  sim.cc  uart_rx.sv  uart_top.sv  uart_tx.sv
labs/14-reloc-bootloader/: Makefile  README.md
labs/14-reloc-bootloader/code/: 0-test-reloc.c  Makefile  README.md  cpyjmp.c  cpyjmp.h
labs/15-stepper-motor/: PRELAB.md  README.md  alex-README.md
labs/15-stepper-motor/alex-code/: .Makefile.swp  Makefile  Q.h  math-helpers.h  national_anthem.c  stepper-int.c  stepper-int.h  stepper-test.c  stepper.c  stepper.h
labs/15-stepper-motor/code/: Makefile  README.md  a4988.h  ads1115.h  circle-test.c
labs/15-stepper-motor/code-sw-uart/: Makefile  README.md  a4988.h  delay-yield.h  interleave-example.c  measure-motor.c  pretty-time.h
labs/15-stepper-motor/images/: stepper_diagrams.key
labs/15-stepper-motor/use-float/: Makefile  README.md  fp-example.c
labs/16-eraser/: README.md
labs/16-eraser/docs/: postscript.txt
labs/17-i2s/: PRELAB.md  README.md  i2s.h
labs/17-i2s/code/: Makefile  fft.c  fft.h  fft_sine_lut.h  i2s.c  i2s.h
labs/17-i2s/py/: generate_lut.py  text_to_wav.py
labs/17-i2s/tests/: 1-i2s-test.c  2-i2s-dump.c  3-i2s-audiovis.c
labs/18-pitag/: README.md
labs/18-ptag/: Makefile  README.md
labs/19-pcb/: README.md
labs/2-ir/: Makefile  README.md
labs/20-d/: Knitfile  README.md  cpu.d  object.d
labs/21-Zig/: README.md  notes.md
labs/22-koka/: README.md
labs/23-memcheck-llvm/: PRELAB.md  README.md
labs/24-sat-smt-symex/: .gitignore  PRELAB.md
labs/25-riscv/: .gitignore  Knitfile  README.md  bits.h  elf.c  elf.h  main.c  mem.c  rvsim.c  rvsim.h  syscall.c
labs/26-single-step-tricks/: README.md
labs/27-pico/: README.md
labs/27-pico/programs/0-blinker/: README.md  blink.c  meson.build
labs/27-pico/programs/0-blinker/include/: gpio.h
labs/27-pico/programs/2-sw-uart/: hello_world.c  meson.build  sw-uart.c  sw-uart.h
labs/27-pico/programs/2-sw-uart/include/: gpio.h  integer-math.h
labs/27-pico/tools/bin-uf2-converter/: crcpico.h  meson.build  uf2conv.c
labs/3-digital-analyzer/: Makefile  PRELAB.md  README.md  extra
labs/4-ws2812b/: Makefile  README.md
labs/5-malloc+gc/: PRELAB.md  README.md
labs/6-debug-alloc/: README.md
labs/7-mem-protection/: Makefile  README.md
labs/8-i2c-adc/: Makefile  README.md
labs/9-memcheck-stat/: Makefile  PRELAB.md  README.md
libpi/: Makefile  defs.mk  libpi-fp.a.list  libpi.a.list  manifest.mk  staff-start.S
libpi/include/: asm-helpers.h  gpio.h  integer-math.h  rpi-constants.h  rpi-thread.h  rpi.h
libpi/libc/: assert.h
libpi/libm/: Makefile  Makefile.old  README.md  math-protos.h  math_private.h  rpi-math.h  run.sh  s_scalbn.c
libpi/mk/: Makefile.check  Makefile.lib.template  Makefile.template  Makefile.unix
libpi/objs/: asm-helpers.d  cache.d  clean-reboot.d  cstart.d  custom-loader.d  cycle-per-sec.d  default-handler-data-abort.d  default-handler-fast.d  default-handler-int.d  default-handler-interrupt.d  default-handler-prefetch.d  default-handler-reset.d  default-handler-swi.d  default-handler-undefined-inst.d  default-reboot-callout.d  default-reboot-handler.d  delay-ncycles.d  hash.d  interrupts-c.d  maybe.d  memchr.d  memcmp.d  memcpy.d  memiszero.d  memmove.d  memset.d  panic.d  printk.d  putchar.d  putk.d  reboot.d  rpi-rand.d  snprintk.d  strcat.d  strchr.d  strcmp.d  strcpy.d  strlen.d  strncmp.d  timer-interrupt.d  (+4 more)
libpi/src/: gpio.c  kernel-debug.S  uart.c  vector-base.h
libpi/staff-src/: cstart.c  maybe.c  watchdog.c
libpi/tests/: Makefile
libunix/: read-file.c  staff-rules.mk  strcatf.c
libunix/mk/: Makefile.unix
libunix/objs/: can-read.d  close-open-fds.d  creat-file.d  fast-hash.d  find-ttyusb.d  get-exitcode.d  open-tty.d  pi-cat.d  pi-echo.d  pitag-linker.d  put-get.d  read-exact.d  read-file.d  read-timeout.d  run-system.d  set-tty-8n1.d  strcatf.d  suffix.d  time-get-usec.d  tty-gone.d  write-exact.d
(+606 files in other folders)
